lib/src/rust/frb_generated.io.dart


  late final _wire__crate__api__oxicloud__update_configPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_sync_config>)>>(
          'frbgen_oxicloud_app_wire__crate__api__oxicloud__update_config');
  late final _wire__crate__api__oxicloud__update_config =
      _wire__crate__api__oxicloud__update_configPtr
          .asFunction<void Function(int, ffi.Pointer<wire_cst_sync_config>)>();

  ffi.Pointer<ffi.Int64> cst_new_box_autoadd_Chrono_Utc(int value) {
    return _cst_new_box_autoadd_Chrono_Utc(value);
  }

  late final _cst_new_box_autoadd_Chrono_UtcPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int64> Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_cst_new_box_autoadd_Chrono_Utc',
  );
  late final _cst_new_box_autoadd_Chrono_Utc =
      _cst_new_box_autoadd_Chrono_UtcPtr.asFunction<ffi.Pointer<ffi.Int64> Function(int)>();

  ffi.Pointer<wire_cst_conflict_info> cst_new_box_autoadd_conflict_info() {
    return _cst_new_box_autoadd_conflict_info();
  }

  late final _cst_new_box_autoadd_conflict_infoPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_conflict_info> Function()>>(
          'frbgen_oxicloud_app_cst_new_box_autoadd_conflict_info');
  late final _cst_new_box_autoadd_conflict_info = _cst_new_box_autoadd_conflict_infoPtr
      .asFunction<ffi.Pointer<wire_cst_conflict_info> Function()>();

  ffi.Pointer<ffi.Int64> cst_new_box_autoadd_i_64(int value) {
    return _cst_new_box_autoadd_i_64(value);
  }

  late final _cst_new_box_autoadd_i_64Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int64> Function(ffi.Int64)>>(
    'frbgen_oxicloud_app_cst_new_box_autoadd_i_64',
  );
  late final _cst_new_box_autoadd_i_64 =
      _cst_new_box_autoadd_i_64Ptr.asFunction<ffi.Pointer<ffi.Int64> Function(int)>();

  ffi.Pointer<wire_cst_server_info> cst_new_box_autoadd_server_info() {
    return _cst_new_box_autoadd_server_info();
  }

  late final _cst_new_box_autoadd_server_infoPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_server_info> Function()>>(
    'frbgen_oxicloud_app_cst_new_box_autoadd_server_info',
  );
  late final _cst_new_box_autoadd_server_info = _cst_new_box_autoadd_server_infoPtr
      .asFunction<ffi.Pointer<wire_cst_server_info> Function()>();

  ffi.Pointer<wire_cst_sync_config> cst_new_box_autoadd_sync_config() {
    return _cst_new_box_autoadd_sync_config();
  }

  late final _cst_new_box_autoadd_sync_configPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_sync_config> Function()>>(
    'frbgen_oxicloud_app_cst_new_box_autoadd_sync_config',
  );
  late final _cst_new_box_autoadd_sync_config = _cst_new_box_autoadd_sync_configPtr
      .asFunction<ffi.Pointer<wire_cst_sync_config> Function()>();

  ffi.Pointer<wire_cst_list_String> cst_new_list_String(int len) {
    return _cst_new_list_String(len);
  }

  late final _cst_new_list_StringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_list_String> Function(ffi.Int32)>>(
          'frbgen_oxicloud_app_cst_new_list_String');
  late final _cst_new_list_String =
      _cst_new_list_StringPtr.asFunction<ffi.Pointer<wire_cst_list_String> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_u_8_strict> cst_new_list_prim_u_8_strict(
    int len,
  ) {
    return _cst_new_list_prim_u_8_strict(len);
  }

  late final _cst_new_list_prim_u_8_strictPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(ffi.Int32)>>(
          'frbgen_oxicloud_app_cst_new_list_prim_u_8_strict');
  late final _cst_new_list_prim_u_8_strict = _cst_new_list_prim_u_8_strictPtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(int)>();

  ffi.Pointer<wire_cst_list_remote_folder> cst_new_list_remote_folder(int len) {
    return _cst_new_list_remote_folder(len);
  }

  late final _cst_new_list_remote_folderPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_list_remote_folder> Function(ffi.Int32)>>(
          'frbgen_oxicloud_app_cst_new_list_remote_folder');
  late final _cst_new_list_remote_folder = _cst_new_list_remote_folderPtr
      .asFunction<ffi.Pointer<wire_cst_list_remote_folder> Function(int)>();

  ffi.Pointer<wire_cst_list_sync_conflict> cst_new_list_sync_conflict(int len) {
    return _cst_new_list_sync_conflict(len);
  }

  late final _cst_new_list_sync_conflictPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_list_sync_conflict> Function(ffi.Int32)>>(
          'frbgen_oxicloud_app_cst_new_list_sync_conflict');
  late final _cst_new_list_sync_conflict = _cst_new_list_sync_conflictPtr
      .asFunction<ffi.Pointer<wire_cst_list_sync_conflict> Function(int)>();

  ffi.Pointer<wire_cst_list_sync_history_entry> cst_new_list_sync_history_entry(
    int len,
  ) {
    return _cst_new_list_sync_history_entry(len);
  }

  late final _cst_new_list_sync_history_entryPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<wire_cst_list_sync_history_entry> Function(ffi.Int32)>>(
      'frbgen_oxicloud_app_cst_new_list_sync_history_entry');
  late final _cst_new_list_sync_history_entry = _cst_new_list_sync_history_entryPtr
      .asFunction<ffi.Pointer<wire_cst_list_sync_history_entry> Function(int)>();

  ffi.Pointer<wire_cst_list_sync_item> cst_new_list_sync_item(int len) {
    return _cst_new_list_sync_item(len);
  }

  late final _cst_new_list_sync_itemPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_list_sync_item> Function(ffi.Int32)>>(
          'frbgen_oxicloud_app_cst_new_list_sync_item');
  late final _cst_new_list_sync_item =
      _cst_new_list_sync_itemPtr.asFunction<ffi.Pointer<wire_cst_list_sync_item> Function(int)>();

  int dummy_method_to_enforce_bundling() {
    return _dummy_method_to_enforce_bundling();
  }

  late final _dummy_method_to_enforce_bundlingPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
    'dummy_method_to_enforce_bundling',
  );
  late final _dummy_method_to_enforce_bundling =
      _dummy_method_to_enforce_bundlingPtr.asFunction<int Function()>();
}

typedef DartPort = ffi.Int64;
typedef DartDartPort = int;
typedef DartPostCObjectFnTypeFunction = ffi.Bool Function(
    DartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartDartPostCObjectFnTypeFunction = bool Function(
    DartDartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartPostCObjectFnType = ffi.Pointer<ffi.NativeFunction<DartPostCObjectFnTypeFunction>>;

final class wire_cst_list_prim_u_8_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_String extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<wire_cst_list_prim_u_8_strict>> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_sync_config extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> sync_folder;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> database_path;

  @ffi.Uint32()
  external int sync_interval_seconds;

  @ffi.Uint32()
  external int max_upload_speed_kbps;

  @ffi.Uint32()
  external int max_download_speed_kbps;

  @ffi.Bool()
  external bool delta_sync_enabled;

  @ffi.Uint64()
  external int delta_sync_min_size;

  @ffi.Bool()
  external bool pause_on_metered;

  @ffi.Bool()
  external bool wifi_only;

  @ffi.Bool()
  external bool watch_filesystem;

  external ffi.Pointer<wire_cst_list_String> ignore_patterns;

  @ffi.Bool()
  external bool notifications_enabled;

  @ffi.Bool()
  external bool launch_at_startup;

  @ffi.Bool()
  external bool minimize_to_tray;
}

final class wire_cst_conflict_info extends ffi.Struct {
  @ffi.Int32()
  external int conflict_type;

  @ffi.Int64()
  external int detected_at;
}

final class wire_cst_server_info extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> url;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> version;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> name;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> webdav_url;

  @ffi.Uint64()
  external int quota_total;

  @ffi.Uint64()
  external int quota_used;

  @ffi.Bool()
  external bool supports_delta_sync;

  @ffi.Bool()
  external bool supports_chunked_upload;
}

final class wire_cst_remote_folder extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> name;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> path;

  @ffi.Uint64()
  external int size_bytes;

  @ffi.Uint32()
  external int item_count;

  @ffi.Bool()
  external bool is_selected;
}

final class wire_cst_list_remote_folder extends ffi.Struct {
  external ffi.Pointer<wire_cst_remote_folder> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_sync_conflict extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> item_path;

  @ffi.Int64()
  external int local_modified;

  @ffi.Int64()
  external int remote_modified;

  @ffi.Uint64()
  external int local_size;

  @ffi.Uint64()
  external int remote_size;

  @ffi.Int32()
  external int conflict_type;
}

final class wire_cst_list_sync_conflict extends ffi.Struct {
  external ffi.Pointer<wire_cst_sync_conflict> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_sync_history_entry extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  @ffi.Int64()
  external int timestamp;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> operation;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> item_path;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> direction;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> status;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error_message;
}

final class wire_cst_list_sync_history_entry extends ffi.Struct {
  external ffi.Pointer<wire_cst_sync_history_entry> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_SyncStatus_Conflict extends ffi.Struct {
  external ffi.Pointer<wire_cst_conflict_info> field0;
}

final class wire_cst_SyncStatus_Error extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> field0;
}

final class SyncStatusKind extends ffi.Union {
  external wire_cst_SyncStatus_Conflict Conflict;

  external wire_cst_SyncStatus_Error Error;
}

final class wire_cst_sync_status extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external SyncStatusKind kind;
}

final class wire_cst_sync_item extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> path;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> name;

  @ffi.Bool()
  external bool is_directory;

  @ffi.Uint64()
  external int size;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> content_hash;

  external ffi.Pointer<ffi.Int64> local_modified;

  external ffi.Pointer<ffi.Int64> remote_modified;

  external wire_cst_sync_status status;

  @ffi.Int32()
  external int direction;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> etag;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> mime_type;
}

final class wire_cst_list_sync_item extends ffi.Struct {
  external ffi.Pointer<wire_cst_sync_item> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_auth_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> user_id;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> username;

  external wire_cst_server_info server_info;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> access_token;
}

final class wire_cst_sync_result extends ffi.Struct {
  @ffi.Bool()
  external bool success;

  @ffi.Uint32()
  external int items_uploaded;

  @ffi.Uint32()
  external int items_downloaded;

  @ffi.Uint32()
  external int items_deleted;

  @ffi.Uint32()
  external int conflicts;

  external ffi.Pointer<wire_cst_list_String> errors;
